# sk

./: .env.example  .gitignore  ENTERPRISE_ORCHESTRATION_IMPLEMENTATION.md  ENTERPRISE_ORCHESTRATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  INTERMEDIATE_MESSAGING_IMPLEMENTATION.md  ORCHESTRATION_PATTERN_STATUS.md  ORCHESTRATION_TESTING_GUIDE.md  SK_OBSERVABILITY_AUDIT.md  docker-compose.test.yml  docker_cleanup.txt  enterprise_agentic_system.md  env.example  pyproject.toml  requirements.txt  test_docker.sh  test_orchestration.py
.github/: copilot-instructions.md
docker/: Dockerfile  docker-compose.yml
microservices/: ARCHITECTURE_DIAGRAM.md  README.md  SERVICE_DECOMPOSITION.md
microservices/agents/gitlab-agent/: Dockerfile  GitLabAgent.yaml  README.md  gitlab_agent.py  gitlab_plugin.py  main.py  requirements.txt
microservices/agents/jira-agent/: Dockerfile  README.md  jira_agent.py  main.py  requirements.txt
microservices/agents/llm-agent/: Dockerfile  README.md  llm_agent.py  main.py  requirements.txt
microservices/agents/rag-agent/: Dockerfile  README.md  main.py  rag_agent.py  requirements.txt
microservices/agents/search-agent/: Dockerfile  README.md  main.py  requirements.txt  search_agent.py
microservices/agents/template-agent/: Dockerfile  README.md  create_agent.sh  main.py  requirements.txt  template_agent.py
microservices/api-gateway/: Dockerfile  README.md  main.py  requirements.txt
microservices/api-gateway/middleware/: __init__.py  logging_middleware.py  rate_limiting.py  security.py
microservices/api-gateway/routers/: __init__.py  agents.py  chat.py  documents.py  health.py  orchestration.py
microservices/api-gateway/services/: __init__.py  load_balancer.py  routing_service.py
microservices/docker/: build.sh  docker-compose.microservices.yml  docker-compose.production.yml  init-db.sql
microservices/docker/mock-agents/: llm-agent.conf  rag-agent.conf  search-agent.conf
microservices/kubernetes/: deploy.sh
microservices/orchestration/: Dockerfile  README.md  agent_factory.py  database_integration.py  group_chat_manager.py  handoff_manager.py  intermediate_messaging_endpoints.py  main.py  orchestration_engine.py  requirements.txt  session_manager.py
microservices/orchestration/tests/: test_intermediate_messaging.py  test_orchestration_patterns.py
microservices/shared/: __init__.py
microservices/shared/config/: __init__.py  observability_settings.py  settings.py  validation.py
microservices/shared/infrastructure/: __init__.py  database.py  database_per_service.py  discovery_integration.py  health.py  intermediate_messaging.py  messaging.py  monitoring.py  redis.py  service_client.py  service_discovery.py
microservices/shared/infrastructure/ai_services/: __init__.py  (+1 more)
(+3 files in other folders)
